--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
     <div id="centro">
         <img src="sm.png"/>
         <p>De segunda à sexta das 8h30 às 22h</p>
-        <p></p>
+        <p>Rua das Palmeiras, 123,
+            Belo Horizonte, MG,
+            30130-000, Brasil</p>
     </div>
 
     <div id="esquerda">
