--- a/index.html
+++ b/index.html
@@ -183,16 +183,12 @@
     </section>
     </main>
     <footer id="rodape">
-        <h3>CONTATE-NOS:</h3>
     <div id="direita">
-        <p><img src="insta.jpg" />
-            <img src="twitter.png" />
-            <img src="tiktok.png" />
-            <img src="facebook.png" />@sabordeminas</p>
+        <p>@sabordeminas</p>
     </div>
 
     <div id="centro">
-        <img src="sm.png"/>
+        <h3>CONTATE-NOS:</h3>
         <p>De segunda à sexta das 8h30 às 22h</p>
         <p>Rua das Palmeiras, 123,
             Belo Horizonte, MG,
@@ -200,8 +196,7 @@
     </div>
 
     <div id="esquerda">
-        <p><img src="whats.png" />
-        <img src="tel.png" />(15) 99818-2425</p>
+        <p>(15) 99818-2425</p>
     </div>
     </footer>
 </body>
